argocd/kustomize/gateway-api/example-local/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  labels:
    app: istio-gateway
    istio: ingressgateway
spec:
  addresses:
  - type: Hostname
    value: istio-ingressgateway.istio-system
  gatewayClassName: istio
  listeners:
  - name: istio-gateway
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
